--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js"
   },
-  "author": "Jada Mathele",
+  "author": "Boitumelo Lefophane",
   "license": "ISC",
   "dependencies": {
-    "connect-flash": "^0.1.1",
     "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
@@ -20,9 +20,15 @@
     "express-validator": "^5.3.1",
     "http-status-codes": "^1.3.0",
     "method-override": "^3.0.0",
-    "mongodb": "^3.1.10",
-    "mongoose": "^7.3.2",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.1",
     "passport": "^0.4.0",
     "passport-local-mongoose": "^5.0.1"
+  },
+  "resolutions": {
+    "mongodb-connection-string-url": "3.0.1"
+  },
+  "devDependencies": {
+    "npm-force-resolutions": "^0.0.10"
   }
 }
